@@ -1,0 +1,38 @@
+/*
+ * Copyright 2002-2006 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.springframework.webflow.engine.builder.xml;
+
+import junit.framework.TestCase;
+
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.webflow.engine.builder.FlowAssembler;
+
+/**
+ * Test case for XML flow builder using namespaces.
+ * 
+ * @see org.springframework.webflow.engine.builder.xml.XmlFlowBuilder
+ * 
+ * @author Erwin Vervaet
+ */
+public class NamespaceXmlFlowBuilderTests extends TestCase {
+
+	public void testBuildFlow() {
+		XmlFlowBuilder builder = new XmlFlowBuilder(new ClassPathResource("nsFlow.xml", NamespaceXmlFlowBuilderTests.class),
+				new TestFlowServiceLocator());
+		new FlowAssembler("nsFlow", builder).assembleFlow();
+	}
+
+}
